# Streakmeet

./: .gitignore  .prettierignore  DESIGN.md  README.md  ROADMAP.md  UI_RULES.md  docker-compose.rework.yml  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: ui-design.mdc
.husky/: pre-commit
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend-rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend-rust/crates/streakmeet-auth/: Cargo.toml
backend-rust/crates/streakmeet-auth/src/: account.rs  credentials.rs  email.rs  face.rs  jwt.rs  lib.rs  models.rs  oauth.rs  token.rs  verification.rs
backend-rust/crates/streakmeet-auth/src/ops/: account.rs  credentials.rs  email.rs  face.rs  mod.rs  oauth.rs
backend-rust/crates/streakmeet-db/: Cargo.toml
backend-rust/crates/streakmeet-db/src/: lib.rs
backend-rust/crates/streakmeet-face/: Cargo.toml
backend-rust/crates/streakmeet-face/src/: lib.rs  matching.rs  service.rs
backend-rust/crates/streakmeet-legal/: Cargo.toml
backend-rust/crates/streakmeet-legal/src/: documents.rs  lib.rs  locales.rs  privacy.ru.html  service.rs  terms.ru.html
backend-rust/crates/streakmeet-location/: Cargo.toml
backend-rust/crates/streakmeet-location/src/: lib.rs  models.rs  service.rs
backend-rust/crates/streakmeet-media/: Cargo.toml
backend-rust/crates/streakmeet-media/src/: images.rs  lib.rs  storage.rs
backend-rust/crates/streakmeet-memories/: Cargo.toml
backend-rust/crates/streakmeet-memories/src/: feed.rs  lib.rs  milestones.rs  repository.rs
backend-rust/crates/streakmeet-nats/: Cargo.toml
backend-rust/crates/streakmeet-nats/src/: lib.rs
backend-rust/crates/streakmeet-proto/: Cargo.toml  build.rs
backend-rust/crates/streakmeet-proto/src/: lib.rs
backend-rust/crates/streakmeet-social/: Cargo.toml
backend-rust/crates/streakmeet-social/src/: lib.rs  models.rs  service.rs
backend-rust/crates/streakmeet-streaks/: Cargo.toml
backend-rust/crates/streakmeet-streaks/src/: calendar.rs  lib.rs  magic_meet.rs  meet.rs  models.rs  remote_selfie.rs  service.rs  worker.rs
backend-rust/crates/streakmeet-streaks/src/core/: calendar.rs  helpers.rs  mod.rs
backend-rust/crates/streakmeet-streaks/src/ops/: magic_meet.rs  meet.rs  mod.rs  remote_selfie.rs  service.rs  worker.rs
backend-rust/crates/streakmeet-sync/: Cargo.toml
backend-rust/crates/streakmeet-sync/src/: lib.rs  outbox.rs
backend-rust/crates/streakmeet-types/: Cargo.toml
backend-rust/crates/streakmeet-types/src/: lib.rs
backend-rust/crates/streakmeet-users/: Cargo.toml
backend-rust/crates/streakmeet-users/src/: lib.rs  models.rs  service.rs
backend-rust/migrations/: 001_sync_outbox.sql  002_media_objects.sql
backend-rust/proto/: buf.yaml
backend-rust/proto/streakmeet/v1/: auth.proto  social.proto  streaks.proto  sync.proto
backend-rust/services/api-gateway/: Cargo.toml
backend-rust/services/api-gateway/src/: auth.rs  auth_routes.rs  friends.rs  idempotency.rs  legal.rs  location.rs  main.rs  media.rs  memories.rs  routes.rs  streaks.rs  users.rs
backend-rust/services/api-gateway/src/handlers/: media.rs  mod.rs  users.rs
backend-rust/services/api-gateway/src/handlers/auth/: auth_routes.rs  mod.rs  routes.rs
backend-rust/services/api-gateway/src/handlers/data/: friends.rs  legal.rs  location.rs  memories.rs  mod.rs  streaks.rs
backend-rust/services/api-gateway/src/middleware/: auth.rs  idempotency.rs  mod.rs
backend-rust/services/auth-service/: Cargo.toml
backend-rust/services/auth-service/src/: grpc.rs  main.rs
backend-rust/services/social-service/: Cargo.toml
backend-rust/services/social-service/src/: grpc.rs  main.rs
backend-rust/services/streaks-service/: Cargo.toml
backend-rust/services/streaks-service/src/: grpc.rs  main.rs
backend-rust/services/sync-gateway/: Cargo.toml
backend-rust/services/sync-gateway/src/: catchup.rs  connect.rs  hub.rs  main.rs  nats.rs  sync.rs
backend-rust/services/worker-service/: Cargo.toml
backend-rust/services/worker-service/src/: main.rs
backend/models/: age_gender_model-weights_manifest.json
backend/prisma/: schema.prisma
backend/scripts/: migrate-auto-verify-email.ts  migrate-uploads-to-s3.ts  test-face-detect.ts  test-face.ts
backend/src/: index.ts
backend/src/auth/: credentials.ts  middleware.ts  oauth.ts  route.ts  token.ts  verification.ts
backend/src/common/: account.ts  errors.ts  helpers.ts
backend/src/config/: env.ts
backend/src/db/: errors.ts
backend/src/face/: matching.ts
backend/src/friends/: route.ts  service.ts
backend/src/jobs/: scheduler.ts  streakNotifications.ts
backend/src/legal/: documents.ts  locales.extra.ts  locales.ts  route.ts  service.ts
backend/src/lib/: accountDeletion.ts  apiErrors.ts  authToken.ts  email.ts  emailVerify.ts  face.ts  httpErrors.ts  jwtSecret.ts  legalContentLocales.ts  legalDocuments.ts  legalTranslations.ts  location.ts  mediaStorage.ts  memoriesConstants.ts  memoriesDevMode.ts  memoriesMilestones.ts  memoriesRepository.ts  notifications.ts  pagination.ts  paths.ts  photoRepository.ts  prisma.ts  relations.ts  remoteSelfie.ts  routeParams.ts  s3.ts  saveImage.ts  socket.ts  streakAccess.ts  streakCalendar.ts  streakNotifications.ts  streakQueries.ts  timezone.ts  (+1 more)
deploy/: ANDROID_RELEASE.md  GOOGLE_OAUTH.md  RESEND_SETUP.md  deploy-app.sh  ecosystem-rust.config.cjs  ecosystem.config.cjs  nginx-streakmeet-rust.conf  nginx-streakmeet.conf  setup-server.sh
face-service/: analyzer.py  image_utils.py  main.py  requirements.txt  routes.py  schemas.py  start.sh
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/: capacitor.settings.gradle  keystore.properties.example
frontend/scripts/: apply-locale-patches.mjs  generate-locales.mjs  sync-all-locales.mjs  translate-all-locales.mjs  validate-locales.mjs
frontend/src/: App.tsx  index.css  main.tsx
rework-backend/: 01-architecture.md  02-migration-and-realtime.md  README.md
scripts/: contract-parity.sh  smoke-face-e2e.sh
(+230 files in other folders)
