[workspace]
resolver = "2"
members = [
    "crates/streakmeet-types",
    "crates/streakmeet-db",
    "crates/streakmeet-proto",
    "crates/streakmeet-auth",
    "services/api-gateway",
    "services/sync-gateway",
    "services/auth-service",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
streakmeet-auth = { path = "crates/streakmeet-auth" }
streakmeet-db = { path = "crates/streakmeet-db" }
streakmeet-proto = { path = "crates/streakmeet-proto" }
streakmeet-types = { path = "crates/streakmeet-types" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
