[workspace]
resolver = "2"
members = [
    "crates/streakmeet-types",
    "crates/streakmeet-db",
    "crates/streakmeet-proto",
    "crates/streakmeet-auth",
    "crates/streakmeet-nats",
    "crates/streakmeet-sync",
    "crates/streakmeet-social",
    "crates/streakmeet-streaks",
    "crates/streakmeet-location",
    "crates/streakmeet-users",
    "crates/streakmeet-media",
    "crates/streakmeet-memories",
    "crates/streakmeet-legal",
    "crates/streakmeet-face",
    "services/api-gateway",
    "services/streaks-service",
    "services/worker-service",
    "services/sync-gateway",
    "services/auth-service",
    "services/social-service",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.38"
axum = "0.8"
dashmap = "6"
futures = "0.3"
bcrypt = "0.16"
cuid = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
streakmeet-auth = { path = "crates/streakmeet-auth" }
streakmeet-db = { path = "crates/streakmeet-db" }
streakmeet-nats = { path = "crates/streakmeet-nats" }
streakmeet-proto = { path = "crates/streakmeet-proto" }
streakmeet-social = { path = "crates/streakmeet-social" }
streakmeet-streaks = { path = "crates/streakmeet-streaks" }
streakmeet-location = { path = "crates/streakmeet-location" }
streakmeet-users = { path = "crates/streakmeet-users" }
streakmeet-media = { path = "crates/streakmeet-media" }
streakmeet-memories = { path = "crates/streakmeet-memories" }
streakmeet-legal = { path = "crates/streakmeet-legal" }
streakmeet-face = { path = "crates/streakmeet-face" }
streakmeet-sync = { path = "crates/streakmeet-sync" }
streakmeet-types = { path = "crates/streakmeet-types" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
s3 = { package = "rust-s3", version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
