[package]
name = "streakmeet-auth"
version.workspace = true
edition.workspace = true

[dependencies]
bcrypt = { workspace = true }
chrono = { workspace = true }
cuid = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-db = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
