[package]
name = "streakmeet-location"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-sync = { workspace = true }
streakmeet-types = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
