[package]
name = "streakmeet-memories"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-streaks = { workspace = true }
streakmeet-types = { workspace = true }
