[package]
name = "streakmeet-social"
version.workspace = true
edition.workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-sync = { workspace = true }
streakmeet-types = { workspace = true }
tracing = { workspace = true }
