[package]
name = "streakmeet-sync"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-db = { workspace = true }
streakmeet-nats = { workspace = true }
streakmeet-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
