[package]
name = "streakmeet-users"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-auth = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-streaks = { workspace = true }
streakmeet-sync = { workspace = true }
streakmeet-types = { workspace = true }
streakmeet-media = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
