[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
streakmeet-auth = { workspace = true }
streakmeet-db = { workspace = true }
streakmeet-types = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
