[package]
name = "streaks-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "streaks-service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
streakmeet-auth = { workspace = true }
streakmeet-db = { workspace = true }
streakmeet-nats = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-streaks = { workspace = true }
streakmeet-sync = { workspace = true }
streakmeet-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
