[package]
name = "sync-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sync-gateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-stream = "0.3"
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
streakmeet-auth = { workspace = true }
streakmeet-db = { workspace = true }
streakmeet-nats = { workspace = true }
streakmeet-proto = { workspace = true }
streakmeet-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
